infrastructure/kubernetes/admin/0-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: admin-ns
  labels:
    name: admin-ns
