infrastructure/kubernetes/admin/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # prometheus.io/port: "9090"
  # prometheus.io/path: "/metrics"
  # prometheus.io/scrape: "true"
  name: admin-deployment
  labels:
    app: admin
  namespace: admin-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: mekniwassime/devops_project:admin-a14c4e34ed61d898450dd61c4e55cca71273929f
        ports:
        - containerPort: 80
