infrastructure/kubernetes/admin/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: admin-ns
spec:
  ingressClassName: nginx
  rules:
    - host: www.devops-project.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: admin-svc
                port:
                  number: 80
            path: /admin/
