infrastructure/kubernetes/admin/4-network-pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-net-pol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: admin
  policyTypes:
    - Ingress
  ingress:
    - from:
      ports:
        - protocol: TCP
          port: 3000
